// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/aleofreddi/csi-sanlock-lvm/proto";

message MailBoxMessage {
  uint32 next = 1;
  uint32 sender = 2;
  uint32 length = 3;
  bytes payload = 4;
}

enum DiskRpcType {
  DISK_RPC_TYPE_UNKNOWN = 0;
  DISK_RPC_TYPE_REQUEST = 1;
  DISK_RPC_TYPE_RESPONSE = 2;
}

message DiskRpcMessage {
  google.protobuf.Timestamp time = 1;
  DiskRpcType type = 2;
  uint32 channel = 3;
  bytes uuid = 4;
  string method = 5;
  bytes request = 6;
  bytes response = 7;
  string error_msg = 8;
  uint32 error_code = 9;
}

